Make multi-line graphs work
o

--- a/templates/graph.html
+++ b/templates/graph.html
@@ -41,9 +41,10 @@
        style: [{
          selector: 'node',
          style: {
-           label: 'data(id)',
+           label: 'data(name)',
            "background-color": "#eee",
            shape: "roundrectangle",
+           "text-wrap": "wrap",
            width: 'label',
            height: "40px",
            "font-size": 16,
