--- a/templates/graph2.html
+++ b/templates/graph2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%">
   <head>
     <meta charset="utf-8">
     <title>Dark Editor</title>
@@ -8,10 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.0.4/redux.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.0.0/react-redux.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.js"></script>
-    <script type="text/babel" src="/static/app.js">
-    </script>
+    <script type="text/babel" src="/static/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="reset.css">
   </head>
-  <body>
-    <div id='root'></div>
+  <body style="height: 100%">
+    <div id='root' style="background-color: #545454; color: #ccc; height: 100%"></div>
   </body>
 </html>
