Add a "node" with a click

--- a/templates/graph2.html
+++ b/templates/graph2.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.0.0/react-redux.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.js"></script>
     <script type="text/babel" src="/static/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="/static/reset.css">
   </head>
   <body style="height: 100%">
     <div id='root' style="background-color: #545454; color: #ccc; height: 100%"></div>
