--- a/templates/graph2.html
+++ b/templates/graph2.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Dark Editor</title>
-    <script src="https://fb.me/react-0.14.0.js"></script>
-    <script src="https://fb.me/react-dom-0.14.0.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.0.4/redux.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.0.0/react-redux.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.js"></script>
+
+    <script src="/static/react-0.14.0.js"></script>
+    <script src="/static/react-dom-0.14.0.js"></script>
+    <script src="/static/redux-3.0.4.js"></script>
+    <script src="/static/react-redux-4.0.0.js"></script>
+    <script src="/static/babel-standalone-6.18.1.js"></script>
+
     <script type="text/babel" src="/static/app.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/reset.css">
   </head>
