--- a/templates/graph2.html
+++ b/templates/graph2.html
@@ -4,16 +4,21 @@
     <meta charset="utf-8">
     <title>Dark Editor</title>
 
+    <script src="//d3js.org/d3.v3.js"></script>
     <script src="/static/react-0.14.0.js"></script>
     <script src="/static/react-dom-0.14.0.js"></script>
     <script src="/static/redux-3.0.4.js"></script>
     <script src="/static/react-redux-4.0.0.js"></script>
     <script src="/static/babel-standalone-6.18.1.js"></script>
+    <script src="/static/facade-0.3.0.min.js"></script>
 
-    <script type="text/babel" src="/static/app.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/reset.css">
+
   </head>
   <body style="height: 100%">
-    <div id='root' style="background-color: #545454; color: #ccc; height: 100%"></div>
+    <div id='root' style="background-color: #545454; color: #ccc; height: 100%">
+      <canvas style="height: 100%" />
+    </div>
+    <script src="/static/graph.js"></script>
   </body>
 </html>
