--- a/static/base.css
+++ b/static/base.css
@@ -3,7 +3,7 @@
 ** Description: Base style guidelines for Project Dark elements
 ** Author: Pixelkeet - www.pixelkeet.com
 ** Created: 12-16-2016
-** Updated: 12-16-2016
+** Updated: 12-17-2016
 ************************************** */
 
 html {
@@ -26,6 +26,7 @@ body {
 }
 
 .block {
+  position: relative;
 	-webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -45,12 +46,7 @@ body {
 }
 
 .block.diamond {
-  position: relative;
-  width:200px;
-  height:40px;
-  margin-left:40px;
   text-align:center;
-  line-height:40px;
 }
 
 .block.diamond:before {
@@ -60,7 +56,7 @@ body {
   top:0px;
   width:15px;
   height:100%;
-  background: url(../img/diamond-l.svg) center no-repeat;
+  background: url(diamond-l.svg) center no-repeat;
 }
 
 .block.diamond:after {
@@ -70,7 +66,7 @@ body {
   top:0px;
   width:15px;
   height:100%;
-  background: url(../img/diamond-r.svg) center no-repeat;
+  background: url(diamond-r.svg) center no-repeat;
 }
 
 .description {
@@ -79,6 +75,67 @@ body {
 
 .list {
 	line-height: 1.5em;
+}
+
+.item-block {
+  display: block;
+  min-height: 2em;
+}
+.item-block:before {
+  content:"";
+  position:relative;
+  top:0.3em;
+  margin-right:0.3em;
+  border:2px solid #777;
+  border-radius: 1em;
+  height: 0.9em;
+  width: 0.9em;
+  display: inline-block;
+}
+.item-block:hover:before {
+  border:2px solid #fff;
+}
+.item-block:active:before,
+.item-block:focus:before {
+  border:2px solid #fff;
+  background: #fff;
+}
+
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left:    7px solid transparent;
+  border-right:   7px solid transparent;
+  border-bottom:  7px solid #777;
+}
+
+.arrow-down {
+  width: 0; 
+  height: 0; 
+  border-left:    7px solid transparent;
+  border-right:   7px solid transparent;
+  border-top:     7px solid #777;
+}
+
+.arrow-right {
+  width: 0; 
+  height: 0; 
+  border-top:     7px solid transparent;
+  border-bottom:  7px solid transparent;
+  border-left:    7px solid #777;
+}
+
+.arrow-left {
+  width: 0; 
+  height: 0; 
+  border-top:     7px solid transparent;
+  border-bottom:  7px solid transparent; 
+  border-right:   7px solid #777;
+}
+
+.center {
+  display: block;
+  text-align: center;
 }
 
 h3 {
