--- a/static/base.css
+++ b/static/base.css
@@ -3,7 +3,7 @@
 ** Description: Base style guidelines for Project Dark elements
 ** Author: Pixelkeet - www.pixelkeet.com
 ** Created: 12-16-2016
-** Updated: 12-17-2016
+** Updated: 12-18-2016
 ************************************** */
 
 html {
@@ -45,11 +45,22 @@ body {
   border-radius:					2em;
 }
 
-.block.diamond {
+.block.round-med {
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius:  0.5em;
+  /* Firefox 1-3.6 */
+  -moz-border-radius:     0.5em;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius:          0.5em;
+}
+
+.diamond {
+  position: relative;
+  display: inline-block;
   text-align:center;
 }
 
-.block.diamond:before {
+.diamond .block:before {
   content:"";
   position: absolute;
   right: 100%;
@@ -59,7 +70,7 @@ body {
   background: url(diamond-l.svg) center no-repeat;
 }
 
-.block.diamond:after {
+.diamond .block:after {
   content:"";
   position: absolute;
   left: 100%;
@@ -74,36 +85,39 @@ body {
 }
 
 .list {
+  display: inline-block;
+  margin-top: 0.5em;
 	line-height: 1.5em;
 }
 
 .item-block {
   display: block;
   min-height: 2em;
+  margin-left: -0.5em;
 }
 .item-block:before {
   content:"";
   position:relative;
-  top:0.3em;
-  margin-right:0.3em;
-  border:2px solid #777;
-  border-radius: 1em;
-  height: 0.9em;
-  width: 0.9em;
+  top:0.2em;
+  margin-right:0.5em;
+  border:1px solid #777;
+  border-radius: 0.7em;
+  height: 0.7em;
+  width: 0.7em;
   display: inline-block;
 }
 .item-block:hover:before {
-  border:2px solid #fff;
+  border:1px solid #fff;
 }
 .item-block:active:before,
 .item-block:focus:before {
-  border:2px solid #fff;
+  border:1px solid #fff;
   background: #fff;
 }
 
 .arrow-up {
-  width: 0;
-  height: 0;
+  width: 0; 
+  height: 0; 
   border-left:    7px solid transparent;
   border-right:   7px solid transparent;
   border-bottom:  7px solid #777;
@@ -139,7 +153,9 @@ body {
 }
 
 h3 {
-	margin:0 0 0.5em 0;
+	margin:0;
 	border-bottom: 1px solid #777;
 	padding-bottom: 0.25em;
 }
+
+
