--- a/static/base.css
+++ b/static/base.css
@@ -1,14 +1,7 @@
-@charset "utf-8";
-/* Title: Project Dark Elements
-** Description: Base style guidelines for Project Dark elements
-** Author: Pixelkeet - www.pixelkeet.com
-** Created: 12-16-2016
-** Updated: 12-18-2016
-************************************** */
-
 html {
   height: 100%;
 }
+
 body {
 	font-family: 'Roboto', Arial, Helvetica, sans-serif;
   margin: 0;
@@ -27,8 +20,6 @@ body {
 
 .block {
   position: relative;
-	-webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 	border: 1px solid #777;
 	padding: 0.8em 1em;
@@ -37,47 +28,11 @@ body {
 }
 
 .block.round {
-	/* Safari 3-4, iOS 1-3.2, Android 1.6- */
-  -webkit-border-radius:	2em;
-  /* Firefox 1-3.6 */
-  -moz-border-radius:			2em;
-  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius:					2em;
 }
 
 .block.round-med {
-  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
-  -webkit-border-radius:  0.5em;
-  /* Firefox 1-3.6 */
-  -moz-border-radius:     0.5em;
-  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius:          0.5em;
-}
-
-.diamond {
-  position: relative;
-  display: inline-block;
-  text-align:center;
-}
-
-.diamond .block:before {
-  content:"";
-  position: absolute;
-  right: 100%;
-  top:0px;
-  width:15px;
-  height:100%;
-  background: url(diamond-l.svg) center no-repeat;
-}
-
-.diamond .block:after {
-  content:"";
-  position: absolute;
-  left: 100%;
-  top:0px;
-  width:15px;
-  height:100%;
-  background: url(diamond-r.svg) center no-repeat;
 }
 
 .description {
@@ -113,38 +68,6 @@ body {
 .item-block:focus:before {
   border:1px solid #fff;
   background: #fff;
-}
-
-.arrow-up {
-  width: 0;
-  height: 0;
-  border-left:    7px solid transparent;
-  border-right:   7px solid transparent;
-  border-bottom:  7px solid #777;
-}
-
-.arrow-down {
-  width: 0;
-  height: 0;
-  border-left:    7px solid transparent;
-  border-right:   7px solid transparent;
-  border-top:     7px solid #777;
-}
-
-.arrow-right {
-  width: 0;
-  height: 0;
-  border-top:     7px solid transparent;
-  border-bottom:  7px solid transparent;
-  border-left:    7px solid #777;
-}
-
-.arrow-left {
-  width: 0;
-  height: 0;
-  border-top:     7px solid transparent;
-  border-bottom:  7px solid transparent;
-  border-right:   7px solid #777;
 }
 
 .center {
@@ -207,7 +130,7 @@ form {
 }
 
 /* Reduce spacing */
-.item-block {
+.parameter {
   min-height: 0em;
 }
 
@@ -217,6 +140,6 @@ form {
 }
 
 /* highlight title */
-.title {
+.selected {
     color: red;
 }
