Display errors better

--- a/static/base.css
+++ b/static/base.css
@@ -11,8 +11,12 @@ body {
   color:#fff;
 }
 
+#darkInput {
+  width: 300px;
+  margin-right: 5px;
+}
 form {
-    display: inline;
+  display: inline;
 }
 
 #grid {
