Add some autocomplete

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -11,18 +11,19 @@
   </head>
   <body>
     <script type="text/javascript">
+     complete = ALLFUNCTIONS;
      try {
        storage = localStorage.getItem('editor');
        state = JSON.parse(storage);
-       elmapp = Elm.Main.fullscreen(state);
+       elmapp = Elm.Main.fullscreen({state: state, complete: complete});
      }
      catch (e) {
        console.log("Elm threw when called with " + JSON.stringify(state));
-       elmapp = Elm.Main.fullscreen(null);
+       elmapp = Elm.Main.fullscreen({state: null, complete: complete});
      }
      elmapp.ports.setStorage.subscribe(function (state) {
        localStorage.setItem('editor', JSON.stringify(state))
-      });
+     });
     </script>
   </body>
 </html>
