Implement autocomplete directly

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -116,3 +116,12 @@ form {
   font-size: 12px;
   float: right;
 }
+
+
+.autocomplete-holder {
+
+}
+
+.autocomplete-item.highlighted {
+  background: blue;
+}
