Make entrys appear in front of nodes

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -11,6 +11,11 @@ body {
   color:#fff;
 }
 
+.entry > .inner {
+  /* Put the entry node in front of all other nodes */
+  z-index: 1;
+}
+
 #search-container {
   position: relative;
 }
