Make arg prettyish

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -140,6 +140,11 @@ form {
   width: 100%;
 }
 
+.arg .header {
+  width: 18px;
+  top: 12px;
+}
+
 .parameters {
   cursor: default;
   color: red;
