Make the return node prettyish

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -145,6 +145,11 @@ form {
   top: 12px;
 }
 
+.return .header {
+  top: -6px;
+  position: relative;
+}
+
 .parameters {
   cursor: default;
   color: red;
