--- a/server/static/base.css
+++ b/server/static/base.css
@@ -70,6 +70,10 @@ form {
   background: #252b2e;
 }
 
+.node.functiondef.selected > .inner {
+  background: #2e2525;
+}
+
 .node .inner {
   z-index: 20; /* hide behind edges */
   position: relative;
@@ -95,7 +99,7 @@ form {
   z-index: 20; /* less than parameters, must not be negative (else events stop working */
 }
 
-.node.functioncall.selected .inner, .node.value.selected .inner {
+.node.selected .inner, .node.selected {
   border-radius: 0.5em;
 }
 
