--- a/server/static/base.css
+++ b/server/static/base.css
@@ -24,17 +24,18 @@ Top level
   background-color: transparent;
   background-image: linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent);
   background-size: 2em 2em;
-  flex: 3 0 0;
+  flex: 0 0 70%;
   position: relative;
 }
 
 #docs {
-  flex: 1 0 0;
+  flex: 0 0 30%;
+  flex-basis: auto;
+	font-family: "Source Code Pro";
+  font-size: 8pt;
 }
 
 #darkLive > pre {
-	font-family: monaco;
-  font-size: 80%;
   margin: 0;
 }
 
