--- a/server/static/base.css
+++ b/server/static/base.css
@@ -17,26 +17,27 @@ Top level
 
 #container {
   display: flex;
-  flex-direction: row;
 }
 
 #grid {
   background-color: transparent;
   background-image: linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent);
   background-size: 2em 2em;
-  flex: 0 0 70%;
   position: relative;
+  flex: 1;
 }
 
 #docs {
-  flex: 0 0 30%;
-  flex-basis: auto;
+  flex: 0 0 400px;
+  width: 400px;
 	font-family: "Source Code Pro";
   font-size: 8pt;
 }
 
-#darkLive > pre {
-  margin: 0;
+#darkLive, #darkLive > pre {
+}
+
+#darkDesc {
 }
 
 #darkErrors {
