Pick a better highlight color

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -90,7 +90,7 @@ form {
 }
 
 .autocomplete-item.highlighted {
-  background: blue;
+  background: #1c3670;
 }
 .autocomplete-item.greyed {
   color: grey;
