Indent and show the foreach loop

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -113,7 +113,8 @@ Nodes
   /* Ideally, we'd have the background of a function behind the edges but
   in front of the grid. Unfortunately, z-index on SVG is kinda hard, so
   I don't know how to make this work. */
-  background: #252b2e;
+  /* background: #252b2e; */
+  background: transparent;
 }
 
 .node.functiondef.selected {
