--- a/server/static/base.css
+++ b/server/static/base.css
@@ -113,12 +113,7 @@ Nodes
   /* Ideally, we'd have the background of a function behind the edges but
   in front of the grid. Unfortunately, z-index on SVG is kinda hard, so
   I don't know how to make this work. */
-  /* background: #252b2e; */
   background: transparent;
-}
-
-.node.functiondef.selected {
-  background: #2e2525;
 }
 
 .name {
@@ -128,7 +123,6 @@ Nodes
 
 .node {
   box-sizing: border-box;
-  /* border: 1px solid #333; */
   font-size: 14px;
   background: #272728;
 }
@@ -139,21 +133,15 @@ Nodes
 }
 
 .node.functioncall, .node.value {
-  /* border-radius: 2em; */
   padding: 0.3em 0.3em;
   display: block;
 }
 
 .node.selected {
-  /* border-radius: 0.5em; */
-}
-
-.selected .name {
-  color: red;
+  background: #373738;
 }
 
 .node.page {
-  /* border-radius: 1em; */
   padding: 0.5em 1.7em;
   text-align: center;
 }
@@ -184,6 +172,10 @@ Nodes
   margin: 4px 0 0 0;
   font-size: 10pt;
   width: 500px;
+}
+
+.node .arg_none {
+  color: red;
 }
 
 
