--- a/server/static/base.css
+++ b/server/static/base.css
@@ -116,44 +116,43 @@ Nodes
   background: transparent;
 }
 
-.name {
+.title {
   /* Targets are larger than regular letters - this canonicalizes the size */
-  max-height: 16px;
+  max-height: 11px;
 }
 
 .node {
   box-sizing: border-box;
   font-size: 14px;
   background: #272728;
+  padding-top: 2px;
+  padding-left: 5px;
+  padding-bottom: 10px;
 }
 
-.node.functioncall .name, .node.value .name, node.page .name {
-  display: block;
-  text-align: center;
-}
-
-.node.functioncall, .node.value {
-  padding: 0.3em 0.3em;
+.node.functioncall .title, .node.value .title, .node.page .title {
   display: block;
 }
 
 .node.selected {
-  background: #373738;
+  background: white;
+  color: black;
 }
+
 
 .node.page {
   padding: 0.5em 1.7em;
   text-align: center;
 }
 
-.page .name {
+.page .title {
   display: block;
   font-weight: bold;
   font-size: 1.37em;
   margin: 1em 0;
 }
 
-.datastore .name {
+.datastore .title {
   display: block; /* extend the line for the full width of the node */
   font-weight: bold;
   font-size: 1.37em;
