--- a/server/static/base.css
+++ b/server/static/base.css
@@ -15,35 +15,13 @@ body {
 Top level
 ********************/
 
-#container {
-  display: flex;
-}
-
 #grid {
   /* background-color: transparent; */
   /* background-image: linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent); */
   background: #1c1c1d;
   /* background-size: 2em 2em; */
   position: relative;
-  flex: 1;
 }
-
-#docs {
-  flex: 0 0 400px;
-  width: 400px;
-	font-family: "Source Code Pro";
-  font-size: 8pt;
-}
-
-#darkLive, #darkLive > pre {
-}
-
-#darkDesc {
-}
-
-#darkErrors {
-}
-
 
 /********************
 Entry (is also a node)
@@ -227,8 +205,8 @@ Node Header
 }
 
 /* Put it in the top right */
-/* body .elm-overlay .elm-mini-controls { */
-/*   top: 0; */
-/*   bottom: auto; */
-/*   right: 0px; */
-/* } */
+body .elm-overlay .elm-mini-controls {
+  top: 0;
+  bottom: auto;
+  right: 0px;
+}
