Move buttons and prevent screen jitter

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -198,6 +198,11 @@ Node Header
 /*   right: 0px; */
 /* } */
 
+#buttons {
+    position: absolute;
+    left: 0px;
+}
+
 .specialButton {
   margin-right: 4px;
 }
