text-align: center; for values also

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -187,12 +187,16 @@ Nodes
   text-align: center;
 }
 
+.node.value {
+  text-align: center;
+}
+
 .node .arg_const {
   font-style: italic;
 }
 
 .node .arg_edge {
-    color: #585858;
+  color: #585858;
 }
 
 
