--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -6,7 +6,7 @@
     <title>Project Dark</title>
     <link rel="stylesheet" type="text/css" href="/static/reset-normalize.css" />
     <link rel="stylesheet" type="text/css" href="/static/base.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
     <script src="/static/elm.js"> </script>
   </head>
   <body>
